--- a/Bio1.html
+++ b/Bio1.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #1
             </title>
         </head>
         <body>
@@ -89,16 +89,16 @@
                                                         <td height="25">&nbsp;greater moisture requirements, aglaonema has been identified by a few gardeners as a potential greenhouse crop. They</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;flourish in the warm, smoggy, and vivid environment of a greenhouse, and they're frequently cultivated successfully</td>
+                                                        <td height="25">&nbsp;flourish in the warm, smoggy, and vivid environment of a greenhouse, and they're frequently cultivated successfully indoors</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;indoors by as closely matching these requirements as possible. The most important thing to remember with aglaonema</td>
+                                                        <td height="25">&nbsp;by as closely matching these requirements as possible. The most important thing to remember with aglaonema is to keep</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;is to keep it wet and warm. If you follow these methods, you will be rewarded with a long-lasting, safe houseplant</td>
+                                                        <td height="25">&nbsp;it wet and warm. If you follow these methods, you will be rewarded with a long-lasting, safe houseplant that will not exceed</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;that will not exceed its pot.</td>
+                                                        <td height="25">&nbsp;its pot.</td>
                                                     </tr>
                                                 </table>
                                         </font>
