--- a/Bio2.html
+++ b/Bio2.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #2
             </title>
         </head>
         <body>
@@ -81,22 +81,22 @@
                                                         <td height="25">&nbsp;at the end of a short stalk and are not noticeable; they are frequently concealed behind the leaves. Because alocasias are</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;tropical plants, they require a lot of moisture. Often these, which include Alocasia Polly, have tough outer stems that</td>
+                                                        <td height="25">&nbsp;tropical plants, they require a lot of moisture. Often these, which include Alocasia Polly, have tough outer stems that they</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;they utilize to hold moisture. Alocasia feeds itself by using the moisture preserved in its stems, eliminating the</td>
+                                                        <td height="25">&nbsp;utilize to hold moisture. Alocasia feeds itself by using the moisture preserved in its stems, eliminating the flourish in the</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;flourish in the warm, smoggy, and vivid environment of a greenhouse, and they're frequently cultivated successfully</td>
+                                                        <td height="25">&nbsp;warm, smoggy, and vivid environment of a greenhouse, and they're frequently cultivated successfully necessity for soil</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;necessity for soil moisture. It is highly susceptible to overwatering - it prefers dry soil. They usually die in cold</td>
+                                                        <td height="25">&nbsp;moisture. It is highly susceptible to overwatering - it prefers dry soil. They usually die in cold climates or even perhaps</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;climates or even perhaps the dehydration of artificial heating, and yet attempting to gradually acclimate plants </td>
+                                                        <td height="25">&nbsp;the dehydration of artificial heating, and yet attempting to gradually acclimate plants must always be kept safe from</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;must always be kept safe from predatory mites or red spiders.</td>
+                                                        <td height="25">&nbsp;predatory mites or red spiders.</td>
                                                     </tr>  
                                                 </table>
                                         </font>
