--- a/Bio7.html
+++ b/Bio7.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #7
             </title>
         </head>
         <body>
