--- a/Bio8.html
+++ b/Bio8.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #8
             </title>
         </head>
         <body>
@@ -78,7 +78,7 @@
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td><center><img src="vd.png" width="900"></center></td>
+                                                        <td><center><img src="vd.png" width="700"></center></td>
                                                     </tr>
                                                 </table>
                                             </font>
