--- a/Bio3.html
+++ b/Bio3.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #3
             </title>
         </head>
         <body>
