--- a/Bio6.html
+++ b/Bio6.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Gobble Gums IA - About
+                Plant Systematics #6
             </title>
         </head>
         <body>
