--- a/Bio8.html
+++ b/Bio8.html
@@ -78,7 +78,11 @@
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td><center><img src="vd.jpg" width="700"></center></td>
+                                                        <td><center><img src="col.jpg" width="700">
+                                                            <br><br>
+                                                            <img src="vd.jpg" width="700">
+                                                            </center>
+                                                        </td>
                                                     </tr>
                                                 </table>
                                             </font>
